--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             >
               <img
                 class="icon"
-                src="images/Linkedin.svg"
+                src="images/linkedin.svg"
                 alt="ícone linkedin"
               />
             </a>
@@ -59,7 +59,7 @@
             <a href="https://instagram.com/brunocarvmel" target="_blank">
               <img
                 class="icon"
-                src="images/Instagram.svg"
+                src="images/instagram.svg"
                 alt="ícone instagram"
               />
             </a>
